# SoftwarePortf-lje

./: ApeKing.cpp  ApeKing.h  CMakeLists.txt  CaveFactory.cpp  CaveFactory.h  Controller.cpp  Controller.h  DatabaseCommunication.cpp  DatabaseCommunication.h  Dragon.cpp  Dragon.h  Hero.cpp  Hero.h  Hest.cpp  Hest.h  Monster.cpp  Monster.h  MonsterFactory.cpp  MonsterFactory.h  MonsterType.h  README.md  StrongGoblin.cpp  StrongGoblin.h  StrongerGoblin.cpp  StrongerGoblin.h  TheStrongestGoblin.cpp  TheStrongestGoblin.h  Unicorn.cpp  Unicorn.h  WeakGoblin.cpp  WeakGoblin.h  Weapons.cpp  Weapons.h  create_database.txt  game.db  gitlog.txt  main.cpp
